# al-benchmark

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
archive/scale_failure_study/: README.md  analyze_scale_knees.py  exp_scale_failure.py  results_ackley2.csv  results_ackley4.csv  results_ackley6.csv  results_ackley8.csv  results_branin_phase1.csv  results_branin_v2_newprobe.csv  results_hartmann6_newprobe.csv  results_hartmann6_oldprobe.csv
docs/: blueprint_addendum_ament_part1.md  handoff.md  lab_notebook.md  phase2_blueprint.md  reading_log.md
experiments/: death_suite.py  exp_01_branin_strategies.py  exp_02_strategies_per_problem.py  exp_03_friedman_nemenyi.py  exp_04_corrected_stats.py  exp_05_tier1a_reanalysis.py  exp_06_timing_pilot.py  exp_07_tier1b_spotcheck.py  exp_09_prereg_analysis.py  run_tier1b_docker.sh
literature/: ament_logei_protocol.md  death_supplementary_audit.md
notebooks/: 01_branin_baseline.ipynb  02_stats_analysis.ipynb
report/: abstract.tex  main.tex  references.bib  sec1_intro_sec2_background.tex  sec3_methods.tex  sec4_results.tex  sec5_discussion_sec6_conclusion.tex
report/phase2_paper/: main.tex  refs.bib
results/: exp_03_stats_summary.json  exp_04_corrected_stats.json  exp_05_tier1a.json  exp_06_timing_pilot.json  exp_07_tier1b.json
src/al_benchmark/: probe.py
src/al_benchmark/core/: bo_loop.py
src/al_benchmark/problems/: base.py  death.py  engineering.py  (+1 more)
tests/: test_death_problems.py  test_eps_greedy.py  test_initial_design.py  test_policy_equivalence.py  test_probe.py  test_regression_ei.py
(+11 files in other folders)
