[project]
name = "al-benchmark"
version = "0.1.0"
description = "Benchmark of acquisition strategies for Bayesian optimization on engineering surrogate models"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]